--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS13K Demo</title>
+    <title>JS13K Vocoder Puccini</title>
     <script type="module" src="/src/index.ts"></script>
-    <link rel="stylesheet" href="/styles.css"/>
   </head>
   <body>
-    <canvas width="240" height="135" tabindex="0" id="c"></canvas>
+    <button id="b">Go</button>
   </body>
 </html>
